SERVER-50586 Collection validation should append the collection's namespace to the output before any exceptions can be thrown